# cw-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: cargo-rust.yml  docker-image.yml
src/: WavSink.rs  futuremorse.rs  main.rs
