[package]
name = "cw-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework","cache", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
morse = "0.1.0"
hound = "3.4.0"
base64 = "0.13.0"
futuresdr = {version="0.0.13", features = ["audio"]}